// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` ModuleArticleHeadline should render correctly 1`] = `
<DocumentFragment>
  <h2
    class="is-centered c-type--h2 article-headline"
    itemprop="headline"
  >
    Module article headline text
  </h2>
</DocumentFragment>
`;

exports[` ModuleArticleHeadline should render h1 htmlElement if isMain is set 1`] = `
<DocumentFragment>
  <h1
    class="is-centered c-type--h1 article-headline"
    itemprop="headline"
  >
    Module article headline text
  </h1>
</DocumentFragment>
`;

exports[` ModuleArticleHeadline should return null if text is empty 1`] = `<DocumentFragment />`;
